ant builds a jar

--- a/.classpath
+++ b/.classpath
@@ -6,87 +6,87 @@
 	<classpathentry kind="src" path="flash" />
 	<classpathentry kind="con"
 		path="org.eclipse.jdt.launching.JRE_CONTAINER" />
-	<classpathentry kind="lib" path="C:/misc_jars/servlet-api.jar" />
+	<classpathentry kind="lib" path="./temp_jars/servlet-api.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/postgresql-8.0-322.jdbc3.jar" />
+		path="./temp_jars/postgresql-8.0-322.jdbc3.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/bcel-5.1.jar" />
+		path="./temp_jars/bcel-5.1.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/struts.jar" />
+		path="./temp_jars/struts.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/batik-awt-util-1.6.jar" />
+		path="./temp_jars/batik-awt-util-1.6.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/batik-dom-1.6.jar" />
+		path="./temp_jars/batik-dom-1.6.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/batik-svggen-1.6.jar" />
+		path="./temp_jars/batik-svggen-1.6.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/batik-util-1.6.jar" />
+		path="./temp_jars/batik-util-1.6.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/batik-xml-1.6.jar" />
+		path="./temp_jars/batik-xml-1.6.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/catalina-root.jar" />
+		path="./temp_jars/catalina-root.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/cewolf-1.0.jar" />
+		path="./temp_jars/cewolf-1.0.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-beanutils.jar" />
+		path="./temp_jars/commons-beanutils.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-collections.jar" />
+		path="./temp_jars/commons-collections.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-digester.jar" />
+		path="./temp_jars/commons-digester.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commonSense.jar" />
+		path="./temp_jars/commonSense.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-fileupload.jar" />
+		path="./temp_jars/commons-fileupload.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-lang.jar" />
+		path="./temp_jars/commons-lang.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-logging.jar" />
+		path="./temp_jars/commons-logging.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-logging-1.0.4.jar" />
+		path="./temp_jars/commons-logging-1.0.4.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-math-1.1.jar" />
+		path="./temp_jars/commons-math-1.1.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-modeler.jar" />
+		path="./temp_jars/commons-modeler.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/commons-validator.jar" />
+		path="./temp_jars/commons-validator.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/cos.jar" />
+		path="./temp_jars/cos.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/crimson-1.1.3.jar" />
+		path="./temp_jars/crimson-1.1.3.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/dilib.jar" />
+		path="./temp_jars/dilib.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/dom4j-full.jar" />
+		path="./temp_jars/dom4j-full.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/gnujaxp-1.0.0.jar" />
+		path="./temp_jars/gnujaxp-1.0.0.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/jai_imageio.jar" />
+		path="./temp_jars/jai_imageio.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/jcommon-1.0.0.jar" />
+		path="./temp_jars/jcommon-1.0.0.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/jfreechart-1.0.0.jar" />
+		path="./temp_jars/jfreechart-1.0.0.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/junit-3.8.jar" />
+		path="./temp_jars/junit-3.8.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/jxl.jar" />
+		path="./temp_jars/jxl.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/log4j-1.2.12.jar" />
+		path="./temp_jars/log4j-1.2.12.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/mail.jar" />
+		path="./temp_jars/mail.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/mjxml.jar" />
+		path="./temp_jars/mjxml.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/mx4j-jmx.jar" />
+		path="./temp_jars/mx4j-jmx.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/activation.jar" />
+		path="./temp_jars/activation.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/InetAddressLocator.jar" />
+		path="./temp_jars/InetAddressLocator.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/joda-time-1.5.2.jar" />
+		path="./temp_jars/joda-time-1.5.2.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/rome-1.0RC1.jar" />
+		path="./temp_jars/rome-1.0RC1.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/jdom.jar" />
+		path="./temp_jars/jdom.jar" />
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT">
 		<attributes>
 			<attribute
@@ -95,33 +95,33 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/jcs-1.3.jar" />
+		path="./temp_jars/jcs-1.3.jar" />
 	<classpathentry kind="lib"
-		path="C:/JPPF-2.0-admin-ui/lib/jppf-common.jar" />
+		path="./temp_jars/jppf-common.jar" />
 	<classpathentry kind="lib"
-		path="C:/JPPF-2.0-admin-ui/lib/jppf-client.jar" />
-	<classpathentry kind="lib" path="C:/jboost_combined" />
+		path="./temp_jars/jppf-client.jar" />
+	<classpathentry kind="lib" path="./temp_jars/jboost.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-xmltypeoracle-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-xmltypeoracle-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-cache-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-cache-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-connectionpool-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-connectionpool-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-core-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-core-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-enhancer-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-enhancer-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-jodatime-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-jodatime-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-jpa-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-jpa-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-management-1.0.2.jar" />
+		path="./temp_jars/datanucleus-management-1.0.2.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-rdbms-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-rdbms-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/datanucleus-spatial-2.0.0-release.jar" />
+		path="./temp_jars/datanucleus-spatial-2.0.0-release.jar" />
 	<classpathentry kind="lib"
-		path="C:/eclipse_workspace/Shepherd Project/temp_jars/jdo2-api-2.3-eb.jar" />
+		path="./temp_jars/jdo2-api-2.3-eb.jar" />
 	<classpathentry kind="output" path="bin" />
 </classpath>
