--- a/.classpath
+++ b/.classpath
@@ -1,127 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry
-		excluding="org/ecocean/NNcomparator.java|org/ecocean/sharkGregorianCalendar.java|org/ecocean/Sys.java|org/ecocean/grid/grothAlgorithm.java|addSpots.java|barker19952005SkipEvenYears.java|barkerAprilMay19952005.java|barkerAprilMay20012005.java|barkerRobust20012005AprilMay.java|versionAllEncounterLites.java|versionAllEncounters.java|versionAllI3SMatchObjects.java|versionAllKeywords.java|versionAllMatchObjects.java|versionAllPoint2D.java|versionAllScanTasks.java|versionAllScanWorkItemResults.java|versionAllScanWorkItems.java|versionAllSharkMailGroups.java|versionAllSharks.java|versionAllSuperSpots.java|removePairs.java|removeSpots.java|i3sScanResultsServlet.java|matchAnalysis.java|ningaloo20012005AprilMayJune.java|ningalooFives.java|ningalooFivesAprilMay.java|ningalooRobust9606.java|ningalooSixApril.java|ningalooSixAprilMayFirst.java|ningalooThree.java|ningalooThreeSingle.java|openAprilMay199520052Year.java|pradelAprilMay19951999.java|pradelAprilMay19952005.java|pradelAprilMay20012005.java|superSpotTester.java|createScanTask.java|migration.java|org/ecocean/servlet/AddSpots.java|org/ecocean/dateComparator.java|org/ecocean/mahaRComparator.java|org/ecocean/mahaSpotTriangle.java"
-		kind="src" output="bin" path="src" />
-	<classpathentry kind="src" path="flash" />
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER" />
-	<classpathentry kind="lib" path="./temp_jars/servlet-api.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/postgresql-8.0-322.jdbc3.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/bcel-5.1.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/struts.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/batik-awt-util-1.6.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/batik-dom-1.6.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/batik-svggen-1.6.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/batik-util-1.6.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/batik-xml-1.6.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/catalina-root.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/cewolf-1.0.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-beanutils.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-collections.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-digester.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commonSense.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-fileupload.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-lang.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-logging.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-logging-1.0.4.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-math-1.1.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-modeler.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/commons-validator.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/cos.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/crimson-1.1.3.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/dilib.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/dom4j-full.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/gnujaxp-1.0.0.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jai_imageio.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jcommon-1.0.0.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jfreechart-1.0.0.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/junit-3.8.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jxl.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/log4j-1.2.12.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/mail.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/mjxml.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/mx4j-jmx.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/activation.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/InetAddressLocator.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/joda-time-1.5.2.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/rome-1.0RC1.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jdom.jar" />
+	<classpathentry excluding="org/ecocean/NNcomparator.java|org/ecocean/sharkGregorianCalendar.java|org/ecocean/Sys.java|org/ecocean/grid/grothAlgorithm.java|addSpots.java|barker19952005SkipEvenYears.java|barkerAprilMay19952005.java|barkerAprilMay20012005.java|barkerRobust20012005AprilMay.java|versionAllEncounterLites.java|versionAllEncounters.java|versionAllI3SMatchObjects.java|versionAllKeywords.java|versionAllMatchObjects.java|versionAllPoint2D.java|versionAllScanTasks.java|versionAllScanWorkItemResults.java|versionAllScanWorkItems.java|versionAllSharkMailGroups.java|versionAllSharks.java|versionAllSuperSpots.java|removePairs.java|removeSpots.java|i3sScanResultsServlet.java|matchAnalysis.java|ningaloo20012005AprilMayJune.java|ningalooFives.java|ningalooFivesAprilMay.java|ningalooRobust9606.java|ningalooSixApril.java|ningalooSixAprilMayFirst.java|ningalooThree.java|ningalooThreeSingle.java|openAprilMay199520052Year.java|pradelAprilMay19951999.java|pradelAprilMay19952005.java|pradelAprilMay20012005.java|superSpotTester.java|createScanTask.java|migration.java|org/ecocean/servlet/AddSpots.java|org/ecocean/dateComparator.java|org/ecocean/mahaRComparator.java|org/ecocean/mahaSpotTriangle.java|org/ecocean/grid/Predict.java|org/ecocean/grid/SharkJPPFTask.java|org/ecocean/servlet/JPPFJobHandler.java" kind="src" output="bin" path="src"/>
+	<classpathentry kind="src" path="flash"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="temp_jars/servlet-api.jar"/>
+	<classpathentry kind="lib" path="temp_jars/postgresql-8.0-322.jdbc3.jar"/>
+	<classpathentry kind="lib" path="temp_jars/bcel-5.1.jar"/>
+	<classpathentry kind="lib" path="temp_jars/struts.jar"/>
+	<classpathentry kind="lib" path="temp_jars/batik-awt-util-1.6.jar"/>
+	<classpathentry kind="lib" path="temp_jars/batik-dom-1.6.jar"/>
+	<classpathentry kind="lib" path="temp_jars/batik-svggen-1.6.jar"/>
+	<classpathentry kind="lib" path="temp_jars/batik-util-1.6.jar"/>
+	<classpathentry kind="lib" path="temp_jars/batik-xml-1.6.jar"/>
+	<classpathentry kind="lib" path="temp_jars/catalina-root.jar"/>
+	<classpathentry kind="lib" path="temp_jars/cewolf-1.0.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-beanutils.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-collections.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-digester.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commonSense.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-fileupload.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-lang.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-logging.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-math-1.1.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-modeler.jar"/>
+	<classpathentry kind="lib" path="temp_jars/commons-validator.jar"/>
+	<classpathentry kind="lib" path="temp_jars/cos.jar"/>
+	<classpathentry kind="lib" path="temp_jars/crimson-1.1.3.jar"/>
+	<classpathentry kind="lib" path="temp_jars/dilib.jar"/>
+	<classpathentry kind="lib" path="temp_jars/dom4j-full.jar"/>
+	<classpathentry kind="lib" path="temp_jars/gnujaxp-1.0.0.jar"/>
+	<classpathentry kind="lib" path="temp_jars/jai_imageio.jar"/>
+	<classpathentry kind="lib" path="temp_jars/jcommon-1.0.0.jar"/>
+	<classpathentry kind="lib" path="temp_jars/jfreechart-1.0.0.jar"/>
+	<classpathentry kind="lib" path="temp_jars/junit-3.8.jar"/>
+	<classpathentry kind="lib" path="temp_jars/jxl.jar"/>
+	<classpathentry kind="lib" path="temp_jars/log4j-1.2.12.jar"/>
+	<classpathentry kind="lib" path="temp_jars/mail.jar"/>
+	<classpathentry kind="lib" path="temp_jars/mjxml.jar"/>
+	<classpathentry kind="lib" path="temp_jars/mx4j-jmx.jar"/>
+	<classpathentry kind="lib" path="temp_jars/activation.jar"/>
+	<classpathentry kind="lib" path="temp_jars/InetAddressLocator.jar"/>
+	<classpathentry kind="lib" path="temp_jars/joda-time-1.5.2.jar"/>
+	<classpathentry kind="lib" path="temp_jars/rome-1.0RC1.jar"/>
+	<classpathentry kind="lib" path="temp_jars/jdom.jar"/>
 	<classpathentry exported="true" kind="con" path="GROOVY_SUPPORT">
 		<attributes>
-			<attribute
-				name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY"
-				value="C:/Groovy-1.6.7" />
+			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="C:/Groovy-1.6.7"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib"
-		path="./temp_jars/jcs-1.3.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jppf-common.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jppf-client.jar" />
-	<classpathentry kind="lib" path="./temp_jars/jboost.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-xmltypeoracle-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-cache-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-connectionpool-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-core-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-enhancer-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-jodatime-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-jpa-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-management-1.0.2.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-rdbms-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/datanucleus-spatial-2.0.0-release.jar" />
-	<classpathentry kind="lib"
-		path="./temp_jars/jdo2-api-2.3-eb.jar" />
-	<classpathentry kind="output" path="bin" />
+	<classpathentry kind="lib" path="temp_jars/jcs-1.3.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-xmltypeoracle-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-cache-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-connectionpool-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-core-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-enhancer-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-jodatime-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-jpa-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-management-1.0.2.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-rdbms-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/datanucleus-spatial-2.0.0-release.jar"/>
+	<classpathentry kind="lib" path="temp_jars/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
