getting derby added/working

--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -21,13 +21,14 @@ htmlShortcutIcon=http://www.whaleshark.org/images/favicon.ico
 GlobalUniqueIdentifierPrefix=ECOCEAN:RTYPUS:
 urlToMastheadGraphic=http://www.whaleshark.org/images/masthead.jpg
 urlToFooterGraphic=http://www.whaleshark.org/images/lib_bottom.gif
-googleMapsKey = ABQIAAAAmb5-A-em_VabiiSEGZpvmRT7GEzM2PWHgJK1ajM92gf9ek7Z_BQbkPV_6CZKieqpp8NM-n4cnUGyrw
-googleSearchKey = 001757959497386081976:n08dpv5rq-m
-datanucleus.ConnectionDriverName=org.postgresql.Driver
-datanucleus.ConnectionURL = jdbc:postgresql://localhost:5432/sharks
-datanucleus.ConnectionUserName=tomcat
-datanucleus.ConnectionPassword=tomcat123
-datanucleus.NontransactionalRead = true
-datanucleus.Multithreaded = true
-datanucleus.RestoreValues = true
-datanucleus.storeManagerType = rdbms	
+googleMapsKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRT7GEzM2PWHgJK1ajM92gf9ek7Z_BQbkPV_6CZKieqpp8NM-n4cnUGyrw
+googleSearchKey=001757959497386081976:n08dpv5rq-m
+datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
+datanucleus.ConnectionURL=jdbc:derby:'db-name';create=true
+datanucleus.ConnectionUserName=shepherd
+datanucleus.ConnectionPassword=shepherd
+datanucleus.autoCreateSchema=true
+datanucleus.NontransactionalRead=true
+datanucleus.Multithreaded=true
+datanucleus.RestoreValues=true
+datanucleus.storeManagerType=rdbms
