--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -23,7 +23,7 @@ urlToFooterGraphic=http://www.splashcatalog.org/shepherd/images/lib_bottom.gif
 googleMapsKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
 googleSearchKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRRTprTin5h_0-odPYUGB6h2YV9tQBSSk7LPXt9jxgaFm7Pt0GVfRimDdw
 datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-datanucleus.ConnectionURL=jdbc:derby:'db-name';create=true
+datanucleus.ConnectionURL=jdbc:derby:shepherd;create=true
 datanucleus.ConnectionUserName=shepherd
 datanucleus.ConnectionPassword=shepherd
 datanucleus.autoCreateSchema=true
