--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -24,7 +24,7 @@ urlToFooterGraphic=http://www.whaleshark.org/images/lib_bottom.gif
 googleMapsKey=ABQIAAAAmb5-A-em_VabiiSEGZpvmRT7GEzM2PWHgJK1ajM92gf9ek7Z_BQbkPV_6CZKieqpp8NM-n4cnUGyrw
 googleSearchKey=001757959497386081976:n08dpv5rq-m
 datanucleus.ConnectionDriverName=org.apache.derby.jdbc.EmbeddedDriver
-datanucleus.ConnectionURL=jdbc:derby:'db-name';create=true
+datanucleus.ConnectionURL=jdbc:derby:shepherd;create=true
 datanucleus.ConnectionUserName=shepherd
 datanucleus.ConnectionPassword=shepherd
 datanucleus.autoCreateSchema=true
