--- a/src/bundles/en/allIndividuals.properties
+++ b/src/bundles/en/allIndividuals.properties
@@ -6,12 +6,12 @@ name = Name
 image = Image
 language = Select Language
 what_do = Select Language
-see_all_sharks = View All Sharks
+see_all_sharks = View All Whales
 encounter = Encounters
-shark = Sharks:
+shark = Whales:
 area = Area to photograph
 match = Two matches
-text = Below are some of the <strong>COUNT</strong> sharks currently identified in the database. Click <strong>Next</strong> to view the next set of sharks. Click <strong>Previous</strong> to see the previous set of sharks.
+text = Below are some of the <strong>COUNT</strong> individuals currently identified in the database. Click <strong>Next</strong> to view the next set of individuals. Click <strong>Previous</strong> to see the previous set.
 records = Records
 next = Next
 previous = Previous
