Updating for a generic context

--- a/src/bundles/en/individuals.properties
+++ b/src/bundles/en/individuals.properties
@@ -1,9 +1,9 @@
-markedIndividualTypeCaps = Whale Shark
+markedIndividualTypeCaps = Humpback Whale
 nickname = Nickname
 nicknamer = Nicknamed by
 alternateID = Alternate ID
 sex = Sex
-setsex = Set sex for shark
+setsex = Set sex for individual
 numencounters = Encounter(s) (not all may be currently visible)
 number = Number
 date = Date
