--- a/src/bundles/en/nav.properties
+++ b/src/bundles/en/nav.properties
@@ -1,11 +1,11 @@
 what_do = What would you like to do?
 read_overview = Introduction
 see_all_encounters = View all encounters
-see_all_sharks = View all sharks
+see_all_sharks = View all whales
 contact_us = Contact Us
 login = Login
 report_encounter = Report an encounter
 home = Home
 submitReport = Submit Report
-viewSharks = View sharks
+viewSharks = View whales
 viewEncounter = View encounters
