--- a/src/bundles/en/submit.properties
+++ b/src/bundles/en/submit.properties
@@ -1,6 +1,6 @@
-submit_title = ECOCEAN - Report a Whale Shark Encounter
+submit_title = Report a Sighting
 submit_report = Report an encounter
-submit_overview = Please use the online form below to record the details of your whale shark encounter, or use our <a href=\"ECOCEAN_whale_shark_sighting_form_2003.pdf\">mail-in form</a>. Be as accurate and specific as possible. Please note that by submitting data and images to the ECOCEAN Photo-identification Library<font size=\"-1\">&copy;</font>, you are granting ECOCEAN unlimited usage of these materials <em>for research and conservation purposes only</em>.<font size=\"+1\"><em>*</em></font>
+submit_overview = Please use the online form below to record the details of your encounter. Be as accurate and specific as possible. Please note that by submitting data and images, you are granting unlimited usage of these materials for research and conservation purposes only.<font size=\"+1\"><em>*</em></font>
 submit_note_red = <font color=\"#000000\"><u><strong>Note</strong></u></font><font color=\"#CC0000\"><em>: The fields labelled in </em><strong>Red</strong><em> are required.</em></font> 
 submit_date = Encounter date
 submit_day = Day
@@ -55,7 +55,7 @@ language = Select Language
 what_do = Select Language
 read_overview = Introduction
 see_all_encounters = View All Encounters
-see_all_sharks = View All Sharks
+see_all_sharks = View All Whales
 log_in = Login
 report_encounter = Report An Encounter
 contact_us = Contact Us
@@ -67,7 +67,7 @@ join_the_dots = Join The Dots...
 menu = Menu
 last_sightings = Last 10 Encounters
 more = More
-ws_info = Whale Shark Information
+ws_info = Species Information
 about = About
 contributors = Contributors
 forum = Forum
