--- a/src/bundles/en/encounters.properties
+++ b/src/bundles/en/encounters.properties
@@ -1,17 +1,17 @@
-title = ECOCEAN - Report a Whale Shark Encounter
+title = Report a Sighting
 report = Report an encounter
-overview = Please use the online form below to record the details of your whale shark encounter, or use our <a href=\"ECOCEAN_whale_shark_sighting_form_2003.pdf\">mail-in form</a>. Be as accurate and specific as possible. Please note that by submitting data and images to the ECOCEAN Photo-ID Library<font size=\"-1\">&copy;</font>, you are granting ECOCEAN unlimited usage of these materials <em>for research and conservation purposes only</em>.<font size=\"+1\"><em>*</em></font>
+overview = Please use the online form below to record the details of your sighting. Be as accurate and specific as possible. Please note that by submitting data, you are granting usage of these materials <em>for research and conservation purposes</em>.<font size=\"+1\"><em>*</em></font>
 note_red = <font color=\"#000000\"><u><strong>Note</strong></u></font><font color=\"#CC0000\"><em>: The fields labelled in </em><strong>Red</strong><em> are required.</em></font> 
-date = Encounter date
+date = Sighting date
 day = Day
 month = Month
 year = Year
-time = Encounter time
-length = Length
+time = Sighting time
+length = Size
 meters = Meters
 feet = Feet
 unknown = Unknown
-howmeasure = How did you measure this length?
+howmeasure = How did you measure this size?
 directlymeasured = directly measured
 personalguess = personal guess
 guessofguide = guess of guide/researcher
@@ -45,29 +45,29 @@ address = Address
 telephone = Telephone
 contactphoto = Photographer contact information
 ifyou = (if you didn't take these pictures)
-pleaseadd = Please add up to four digital images from this encounter by using the fields below. Image files of type JPEG (.jpg) at full quality and full size are preferred, but any image of type <font face=\"Courier New, Courier, mono\">.jpg</font>, <font face=\"Courier New, Courier, mono\">.jpeg</font>, <font face=\"Courier New, Courier, mono\">.bmp</font>, or <font face=\"Courier New, Courier, mono\">.gif</font> is acceptable. At least one of the images must be a left-side or right-side picture of the shark that displays its natural patterning, as shown to the left. No image can be larger than 2 megabytes.
+pleaseadd = Please add up to four digital images from this sighting by using the fields below. Image files of type JPEG (.jpg) at full quality and full size are preferred, but any image of type <font face=\"Courier New, Courier, mono\">.jpg</font>, <font face=\"Courier New, Courier, mono\">.jpeg</font>, <font face=\"Courier New, Courier, mono\">.bmp</font>, or <font face=\"Courier New, Courier, mono\">.gif</font> is acceptable.
 image = Image
-verify = Please verify your information above and then click &quot;Send encounter report&quot; to send ECOCEAN your encounter. Please note that the information indicated above in <font color=\"#CC0000\"><strong>red</strong></font> must be complete, and <em>at least one left- or right-side image must be submitted</em> for consideration.
-legal = ECOCEAN does not sell or distribute your contact information or your copyrighted images to anyone, and we rely on proven electronic methods to protect them from theft. If you have questions about the copyright and personal data protection measures that we have in place, <a href=\"mailto:webmaster@shepherdproject.org\">please contact the webmaster</a>.
+verify = Please verify your information above and then click &quot;Send encounter report&quot; to submit your sighting. Please note that the information indicated above in <font color=\"#CC0000\"><strong>red</strong></font> must be complete, and <em>at least one left- or right-side image must be submitted</em> for consideration.
+legal = Legalese...
 send = Send encounter report
 reportit = Report An Encounter NOW!
 language = Select Language
 what_do = Select Language
 read_overview = Introduction
 see_all_encounters = View All Encounters
-see_all_sharks = View All Sharks
+see_all_sharks = View All Individuals
 log_in = Login
-report_encounter = Report An Encounter
+report_encounter = Report A Sighting
 contact_us = Contact Us
 home = Home
 search = Search
 encounter = Encounters:
-shark = Sharks:
+shark = Whales:
 join_the_dots = Join The Dots...
 menu = Menu
 last_sightings = Last 10 Encounters
 more = More
-ws_info = Whale Shark Information
+ws_info = Species Information
 contributors = Contributors
 about = About
 forum = Forum
