--- a/src/bundles/en/submit.properties
+++ b/src/bundles/en/submit.properties
@@ -45,17 +45,15 @@ submit_address = Address
 submit_telephone = Telephone
 submit_contactphoto = Photographer contact information
 submit_ifyou = (if you didn't take these pictures)
-submit_pleaseadd = Please add up to four digital images or video files from this encounter by using the fields below. Image files of type JPEG (.jpg) at full quality and full size are preferred, but any image or video of type <font face=\"Courier New, Courier, mono\">.jpg</font>, <font face=\"Courier New, Courier, mono\">.jpeg</font>, <font face=\"Courier New, Courier, mono\">.bmp</font>, <font face=\"Courier New, Courier, mono\">.gif</font>, <font face=\"Courier New, Courier, mono\">.mov</font>, <font face=\"Courier New, Courier, mono\">.wmv</font>, <font face=\"Courier New, Courier, mono\">.avi</font>, or <font face=\"Courier New, Courier, mono\">.mpg</font> is acceptable. At least one of the images must be a left-side or right-side picture of the shark that displays its natural patterning, as shown to the left. The total size of all images and video cannot be greater than 30 MB.
+submit_pleaseadd = Please add up to four digital images or video files from this encounter by using the fields below. Image files of type JPEG (.jpg) at full quality and full size are preferred, but any image or video of type <font face=\"Courier New, Courier, mono\">.jpg</font>, <font face=\"Courier New, Courier, mono\">.jpeg</font>, <font face=\"Courier New, Courier, mono\">.bmp</font>, <font face=\"Courier New, Courier, mono\">.gif</font>, <font face=\"Courier New, Courier, mono\">.mov</font>, <font face=\"Courier New, Courier, mono\">.wmv</font>, <font face=\"Courier New, Courier, mono\">.avi</font>, or <font face=\"Courier New, Courier, mono\">.mpg</font> is acceptable.
 submit_image = Image
-submit_verify = Please verify your information above and then click &quot;Send encounter report&quot; to send ECOCEAN your encounter. Please note that the information indicated above in <font color=\"#CC0000\"><strong>red</strong></font> must be complete, and <em>at least one left- or right-side image must be submitted</em> for consideration.
-submit_legal = ECOCEAN does not sell or distribute your contact information or your copyrighted images to anyone, and we rely on proven electronic methods to protect them from theft. If you have questions about the copyright and personal data protection measures that we have in place, <a href=\"mailto:webmaster@shepherdproject.org\">please contact the webmaster</a>.
 submit_send = Send encounter report
 reportit = Report An Encounter NOW!
 language = Select Language
 what_do = Select Language
 read_overview = Introduction
 see_all_encounters = View All Encounters
-see_all_sharks = View All Whales
+see_all_sharks = View All Individuals
 log_in = Login
 report_encounter = Report An Encounter
 contact_us = Contact Us
@@ -63,7 +61,6 @@ home = Home
 search = Search
 encounter = Encounters:
 shark = Sharks:
-join_the_dots = Join The Dots...
 menu = Menu
 last_sightings = Last 10 Encounters
 more = More
