Adding the license key for DynamicImage

--- a/build.xml
+++ b/build.xml
@@ -54,10 +54,16 @@
         <fileset file="src/servletResponseTemplate.htm"/>
       </copy>
   </target>
+  
+     <target name="copy-di-license">
+        <copy todir="${target.dir}/classes">
+          <fileset file="src/lic_di.key"/>
+        </copy>
+  </target>
 
 
 
-  <target name="war" depends="clean, compile, enhance,copy-org.ecocean-JDO,copy-org.ecocean.grid-JDO, copy-bundles, copy-servletResponseTemplate">
+  <target name="war" depends="clean, compile, enhance,copy-org.ecocean-JDO,copy-org.ecocean.grid-JDO, copy-bundles, copy-servletResponseTemplate, copy-di-license">
     <mkdir dir="target"/>
     <war destfile="target/${war.name}-${project.version}.war" webxml="webapps/ROOT/WEB-INF/web.xml">
       <fileset dir="webapps/ROOT"/>
