--- a/build.xml
+++ b/build.xml
@@ -67,9 +67,25 @@
         </copy>
   </target>
 
+   <target name="copy-tracker.swf">
+        <copy todir="${target.dir}/encounters">
+          <fileset file="src/flash/tracker.swf"/>
+        </copy>
+  </target>
+  
+     <target name="copy-view.swf">
+          <copy todir="${target.dir}/encounters">
+            <fileset file="src/flash/view.swf"/>
+          </copy>
+  </target>
 
+     <target name="copy-browsematch.swf">
+          <copy todir="${target.dir}">
+            <fileset file="src/flash/browsematch.swf"/>
+          </copy>
+  </target>
 
-  <target name="war" depends="clean, compile, enhance,copy-org.ecocean-JDO,copy-org.ecocean.grid-JDO, copy-bundles, copy-servletResponseTemplate, copy-di-license, copy-email-files">
+  <target name="war" depends="clean, compile, enhance,copy-org.ecocean-JDO,copy-org.ecocean.grid-JDO, copy-bundles, copy-servletResponseTemplate, copy-di-license, copy-email-files, copy-tracker.swf, copy-view.swf, copy-browsematch.swf">
     <mkdir dir="target"/>
     <war destfile="target/${war.name}-${project.version}.war" webxml="webapps/ROOT/WEB-INF/web.xml">
       <fileset dir="webapps/ROOT"/>
