--- a/webapps/ROOT/WEB-INF/web.xml
+++ b/webapps/ROOT/WEB-INF/web.xml
@@ -162,7 +162,7 @@
 
 
   <servlet>
-       <servlet-name>writeOutScanTask</servlet-name>
+       <servlet-name>WriteOutScanTask</servlet-name>
 	<servlet-class>org.ecocean.servlet.WriteOutScanTask</servlet-class>
   </servlet>
 
@@ -177,28 +177,28 @@
   </servlet>
   
       <servlet>
-           <servlet-name>encounterSetAlternateID</servlet-name>
+           <servlet-name>EncounterSetAlternateID</servlet-name>
     	<servlet-class>org.ecocean.servlet.EncounterSetAlternateID</servlet-class>
     </servlet>
     
           <servlet>
-               <servlet-name>encounterSetInformOthers</servlet-name>
+               <servlet-name>EncounterSetInformOthers</servlet-name>
         	<servlet-class>org.ecocean.servlet.EncounterSetInformOthers</servlet-class>
     </servlet>
 
 
   <servlet>
-       <servlet-name>imageSearch</servlet-name>
+       <servlet-name>ImageSearch</servlet-name>
 	<servlet-class>org.ecocean.servlet.ImageSearch</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>scanAppletSupport</servlet-name>
+       <servlet-name>ScanAppletSupport</servlet-name>
 	<servlet-class>org.ecocean.servlet.ScanAppletSupport</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>scanResultsServlet</servlet-name>
+       <servlet-name>ScanResultsServlet</servlet-name>
 	<servlet-class>org.ecocean.servlet.ScanResultsServlet</servlet-class>
   </servlet>
   
@@ -209,18 +209,18 @@
   
   
 <servlet>
-       <servlet-name>i3sScanResultsServlet</servlet-name>
+       <servlet-name>I3SScanResultsServlet</servlet-name>
 	<servlet-class>org.ecocean.servlet.I3sScanResultsServlet</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>interconnectSubmitSpots</servlet-name>
+       <servlet-name>InterconnectSubmitSpots</servlet-name>
 	<servlet-class>org.ecocean.servlet.InterconnectSubmitSpots</servlet-class>
   </servlet>
 
 
   <servlet>
-       <servlet-name>keywordHandler</servlet-name>
+       <servlet-name>KeywordHandler</servlet-name>
 	<servlet-class>org.ecocean.servlet.KeywordHandler</servlet-class>
   </servlet>
 
@@ -245,17 +245,17 @@
   </servlet>
 
   <servlet>
-       <servlet-name>dontTrack</servlet-name>
+       <servlet-name>DontTrack</servlet-name>
 	<servlet-class>org.ecocean.servlet.DontTrack</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>updateEmailAddress</servlet-name>
+       <servlet-name>UpdateEmailAddress</servlet-name>
 	<servlet-class>org.ecocean.servlet.UpdateEmailAddress</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>trackIt</servlet-name>
+       <servlet-name>TrackIt</servlet-name>
 	<servlet-class>org.ecocean.servlet.TrackIt</servlet-class>
   </servlet>
 
@@ -310,7 +310,7 @@
   </servlet>
 
   <servlet>
-       <servlet-name>trackerFeed</servlet-name>
+       <servlet-name>TrackerFeed</servlet-name>
 	<servlet-class>org.ecocean.servlet.TrackerFeed</servlet-class>
   </servlet>
 
@@ -318,19 +318,19 @@
 
 
   <servlet>
-       <servlet-name>encounterRemoveImage</servlet-name>
+       <servlet-name>EncounterRemoveImage</servlet-name>
 	<servlet-class>org.ecocean.servlet.EncounterRemoveImage</servlet-class>
   </servlet>  
 
 
   
     <servlet>
-         <servlet-name>deleteAdoption</servlet-name>
+         <servlet-name>DeleteAdoption</servlet-name>
   	<servlet-class>org.ecocean.servlet.DeleteAdoption</servlet-class>
   </servlet> 
 
   <servlet>
-       <servlet-name>massSetLocationCodeFromLocationString</servlet-name>
+       <servlet-name>MassSetLocationCodeFromLocationString</servlet-name>
 	<servlet-class>org.ecocean.servlet.MassSetLocationCodeFromLocationString</servlet-class>
   </servlet> 
   
@@ -385,17 +385,17 @@
   </servlet> 
 
   <servlet>
-       <servlet-name>massSwapLocationCode</servlet-name>
+       <servlet-name>MassSwapLocationCode</servlet-name>
 	<servlet-class>org.ecocean.servlet.MassSwapLocationCode</servlet-class>
   </servlet> 
   
     <servlet>
-         <servlet-name>massSetInformOthers</servlet-name>
+         <servlet-name>MassSetInformOthers</servlet-name>
   	<servlet-class>org.ecocean.servlet.MassSetInformOthers</servlet-class>
   </servlet> 
 
   <servlet>
-       <servlet-name>scanTaskHandler</servlet-name>
+       <servlet-name>ScanTaskHandler</servlet-name>
 	<servlet-class>org.ecocean.servlet.ScanTaskHandler</servlet-class>
   </servlet> 
 
@@ -404,11 +404,11 @@
 	<servlet-class>org.ecocean.servlet.IndividualRemoveDataFile</servlet-class>
   </servlet>  
   <servlet>
-       <servlet-name>encounterSetSubmitterID</servlet-name>
+       <servlet-name>EncounterSetSubmitterID</servlet-name>
 	<servlet-class>org.ecocean.servlet.EncounterSetSubmitterID</servlet-class>
   </servlet>  
   <servlet>
-       <servlet-name>encounterSetMatchedBy</servlet-name>
+       <servlet-name>EncounterSetMatchedBy</servlet-name>
 	<servlet-class>org.ecocean.servlet.EncounterSetMatchedBy</servlet-class>
   </servlet>
   
@@ -418,7 +418,7 @@
   </servlet> 
   
 <servlet>
-       <servlet-name>encounterAddImage</servlet-name>
+       <servlet-name>EncounterAddImage</servlet-name>
 	<servlet-class>org.ecocean.servlet.EncounterAddImage</servlet-class>
   </servlet>
 
@@ -427,33 +427,33 @@
   	<servlet-class>org.ecocean.servlet.CalendarXMLServer2</servlet-class>
   </servlet>
 <servlet>
-       <servlet-name>matchAnalysis</servlet-name>
+       <servlet-name>MatchAnalysis</servlet-name>
 	<servlet-class>org.ecocean.servlet.MatchAnalysis</servlet-class>
   </servlet>
 
 
   <servlet>
-       <servlet-name>resurrectDeletedEncounter</servlet-name>
+       <servlet-name>ResurrectDeletedEncounter</servlet-name>
 	<servlet-class>org.ecocean.servlet.ResurrectDeletedEncounter</servlet-class>
   </servlet>
   
     <servlet>
-         <servlet-name>resurrectDeletedAdoption</servlet-name>
+         <servlet-name>ResurrectDeletedAdoption</servlet-name>
   	<servlet-class>org.ecocean.servlet.ResurrectDeletedAdoption</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>scanWorkItemResultsHandler</servlet-name>
+       <servlet-name>ScanWorkItemResultsHandler</servlet-name>
 	<servlet-class>org.ecocean.servlet.ScanWorkItemResultsHandler</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>gridHeartbeatReceiver</servlet-name>
+       <servlet-name>GridHeartbeatReceiver</servlet-name>
 	<servlet-class>org.ecocean.servlet.GridHeartbeatReceiver</servlet-class>
   </servlet>
 
   <servlet>
-       <servlet-name>massExposeGBIF</servlet-name>
+       <servlet-name>MassExposeGBIF</servlet-name>
 	<servlet-class>org.ecocean.servlet.MassExposeGBIF</servlet-class>
   </servlet>
   
@@ -475,7 +475,7 @@
 
 
 <servlet-mapping>
-       <servlet-name>interconnectSubmitSpots</servlet-name>
+       <servlet-name>InterconnectSubmitSpots</servlet-name>
        <url-pattern>/interconnectSubmitSpots</url-pattern>
   </servlet-mapping>
   
@@ -601,17 +601,17 @@
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>massSetLocationCodeFromLocationString</servlet-name>
+       <servlet-name>MassSetLocationCodeFromLocationString</servlet-name>
        <url-pattern>/MassSetLocationCodeFromLocationString</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>massSwapLocationCode</servlet-name>
+       <servlet-name>MassSwapLocationCode</servlet-name>
        <url-pattern>/MassSwapLocationCode</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>massExposeGBIF</servlet-name>
+       <servlet-name>MassExposeGBIF</servlet-name>
        <url-pattern>/MassExposeGBIF</url-pattern>
   </servlet-mapping>
   
@@ -636,36 +636,36 @@
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>dontTrack</servlet-name>
+       <servlet-name>DontTrack</servlet-name>
        <url-pattern>/DontTrack</url-pattern>
   </servlet-mapping>
   
     <servlet-mapping>
-         <servlet-name>deleteAdoption</servlet-name>
+         <servlet-name>DeleteAdoption</servlet-name>
          <url-pattern>/DeleteAdoption</url-pattern>
   </servlet-mapping>
 
 
 
   <servlet-mapping>
-       <servlet-name>trackIt</servlet-name>
+       <servlet-name>TrackIt</servlet-name>
        <url-pattern>/trackIt</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>imageSearch</servlet-name>
+       <servlet-name>ImageSearch</servlet-name>
        <url-pattern>/imageSearch</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>updateEmailAddress</servlet-name>
+       <servlet-name>UpdateEmailAddress</servlet-name>
        <url-pattern>/UpdateEmailAddress</url-pattern>
   </servlet-mapping>
 
 
 
   <servlet-mapping>
-       <servlet-name>matchAnalysis</servlet-name>
+       <servlet-name>MatchAnalysis</servlet-name>
        <url-pattern>/MatchAnalysis</url-pattern>
   </servlet-mapping>
 
@@ -675,7 +675,7 @@
 
 
   <servlet-mapping>
-       <servlet-name>keywordHandler</servlet-name>
+       <servlet-name>KeywordHandler</servlet-name>
        <url-pattern>/KeywordHandler</url-pattern>
   </servlet-mapping>
 
@@ -690,17 +690,17 @@
   </servlet-mapping>
   
       <servlet-mapping>
-           <servlet-name>massSetInformOthers</servlet-name>
+           <servlet-name>MassSetInformOthers</servlet-name>
            <url-pattern>/MassSetInformOthers</url-pattern>
   </servlet-mapping>
   
       <servlet-mapping>
-           <servlet-name>encounterSetAlternateID</servlet-name>
+           <servlet-name>EncounterSetAlternateID</servlet-name>
            <url-pattern>/EncounterSetAlternateID</url-pattern>
   </servlet-mapping>
   
         <servlet-mapping>
-             <servlet-name>encounterSetInformOthers</servlet-name>
+             <servlet-name>EncounterSetInformOthers</servlet-name>
              <url-pattern>/EncounterSetInformOthers</url-pattern>
   </servlet-mapping>
 
@@ -711,7 +711,7 @@
   </servlet-mapping>
 
 <servlet-mapping>
-       <servlet-name>trackerFeed</servlet-name>
+       <servlet-name>TrackerFeed</servlet-name>
        <url-pattern>/TrackerFeed</url-pattern>
   </servlet-mapping>
 
@@ -728,13 +728,13 @@
 
 
   <servlet-mapping>
-       <servlet-name>scanWorkItemResultsHandler</servlet-name>
+       <servlet-name>ScanWorkItemResultsHandler</servlet-name>
        <url-pattern>/ScanWorkItemResultsHandler2</url-pattern>
   </servlet-mapping>
 
 
   <servlet-mapping>
-       <servlet-name>gridHeartbeatReceiver</servlet-name>
+       <servlet-name>GridHeartbeatReceiver</servlet-name>
        <url-pattern>/GridHeartbeatReceiver</url-pattern>
   </servlet-mapping>
 
@@ -749,37 +749,37 @@
     
 
   <servlet-mapping>
-       <servlet-name>scanAppletSupport</servlet-name>
+       <servlet-name>ScanAppletSupport</servlet-name>
        <url-pattern>/ScanAppletSupport</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>scanResultsServlet</servlet-name>
+       <servlet-name>ScanResultsServlet</servlet-name>
        <url-pattern>/ScanResultsServlet</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>i3sScanResultsServlet</servlet-name>
+       <servlet-name>I3SScanResultsServlet</servlet-name>
        <url-pattern>/I3sScanResultsServlet</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>encounterAddImage</servlet-name>
+       <servlet-name>EncounterAddImage</servlet-name>
        <url-pattern>/EncounterAddImage</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>encounterSetSubmitterID</servlet-name>
+       <servlet-name>EncounterSetSubmitterID</servlet-name>
        <url-pattern>/EncounterSetSubmitterID</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>encounterSetMatchedBy</servlet-name>
+       <servlet-name>EncounterSetMatchedBy</servlet-name>
        <url-pattern>/EncounterSetMatchedBy</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-       <servlet-name>encounterRemoveImage</servlet-name>
+       <servlet-name>EncounterRemoveImage</servlet-name>
        <url-pattern>/EncounterRemoveImage</url-pattern>
   </servlet-mapping>
 
