matching war file name in URLs

--- a/src/bundles/en/commonConfiguration.properties
+++ b/src/bundles/en/commonConfiguration.properties
@@ -2,7 +2,7 @@
 imageLocation=encounters 
 
 #base url of the web site
-urlLocation=localhost:8080/shepherd
+urlLocation=localhost:8080/shepherd-1.0
 
 #file system folder in which marked individual data will be stored (e.g. data files)
 markedIndividualDirectoryLocation=individuals 
@@ -11,10 +11,10 @@ markedIndividualDirectoryLocation=individuals
 adoptionLocation=adoptions
 
 #URL to the graphic to be displayed at the top of every page through header.jsp
-urlToMastheadGraphic=http://localhost:8080/shepherd/images/masthead.jpg
+urlToMastheadGraphic=http://localhost:8080/shepherd-1.0/images/masthead.jpg
 
 #URL to the graphic to be displayed at the bottom of every page through footer.jsp
-urlToFooterGraphic=http://localhost:8080/shepherd/images/lib_bottom.gif
+urlToFooterGraphic=http://localhost:8080/shepherd-1.0/images/lib_bottom.gif
 
 #Unique identifier prefix for use with sharing digital biodiversity records (e.g. GBIF, OBIS)
 GlobalUniqueIdentifierPrefix=MY_CATALOG:MY_SPECIES:
@@ -31,8 +31,8 @@ mailHost=localhost
 htmlDescription=A text description of your mark-recapture project
 htmlKeywords=A bunch of keywords to help search engines categorize your web site
 htmlTitle=My Mark-Recapture Project for Species X
-cssURLLocation=http://localhost:8080/shepherd/css/ecocean.css
-htmlShortcutIcon=http://localhost:8080/shepherd/images/favicon.ico
+cssURLLocation=http://localhost:8080/shepherd-1.0/css/ecocean.css
+htmlShortcutIcon=http://localhost:8080/shepherd-1.0/images/favicon.ico
 htmlAuthor=My Research Group
 
 
