--- a/src/bundles/en/allEncounters.properties
+++ b/src/bundles/en/allEncounters.properties
@@ -1,4 +1,4 @@
-individual = Whale
+individual = Individual
 sex = Sex
 male = male
 female = female
@@ -10,7 +10,7 @@ what_do = Select Language
 view_all_unidentified = View All Unidentified Encounters
 view_all = View All Encounters
 encounter = Encounters
-shark = Whales:
+shark = Individuals:
 area = Area to photograph
 match = Two matches
 unidentifiable_text = Below are some of the <strong>COUNT</strong> unidentifiable encounters currently stored in the database. 
