--- a/src/bundles/en/allIndividuals.properties
+++ b/src/bundles/en/allIndividuals.properties
@@ -6,9 +6,9 @@ name = Name
 image = Image
 language = Select Language
 what_do = Select Language
-see_all_sharks = View All Whales
+see_all_sharks = View All Individuals
 encounter = Encounters
-shark = Whales:
+shark = Individuals:
 area = Area to photograph
 match = Two matches
 text = Below are some of the <strong>COUNT</strong> individuals currently identified in the database. Click <strong>Next</strong> to view the next set of individuals. Click <strong>Previous</strong> to see the previous set.
