Pushing out more changes from last night...all security related...simplifications.

--- a/src/bundles/en/allEncounters.properties
+++ b/src/bundles/en/allEncounters.properties
@@ -7,16 +7,17 @@ name = Name
 image = Image
 language = Select Language
 what_do = Select Language
-view_all_unidentified = View All Unidentified Encounters
+view_all_unidentified = View All Unidentifiable Encounters
+view_all_unapproved = View All Unapproved Encounters
 view_all = View All Encounters
 encounter = Encounters
 shark = Individuals:
 area = Area to photograph
 match = Two matches
-unidentifiable_text = Below are some of the <strong>COUNT</strong> unidentifiable encounters currently stored in the database. 
-all_encounters_text= Below are some of the <strong>COUNT</strong> encounters currently stored in the visual database.
+unidentifiable_text = Below are some of the <strong>COUNT</strong> unidentifiable encounter(s) currently stored in the database. 
+all_encounters_text= Below are some of the <strong>COUNT</strong> encounter(s) currently stored in the visual database.
 nav_text = Click any column heading to sort by that field. Click <strong>Next</strong> to view the next set of encounters. Click <strong>Previous</strong> to see the previous set of encounters.
-unapproved_text = Below are the unapproved encounters currently stored in the database.
+unapproved_text = Below are the <strong>COUNT</strong> unapproved encounter(s) currently stored in the database.
 records = Records
 next = Next
 previous = Previous
